fix: hidden scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,5 @@ body {
   font-family: "Inter", sans-serif;
   margin: 0px;
 }
+
+::-webkit-scrollbar {display:none;}
